--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -56,17 +56,17 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.99\textwidth]{pT_pythiaEvents.pdf}
 \label{fig_label}
-\caption{Distribution of jet pT for QCD and QED processes.  Figure created with [put python command here]}
+\caption{Distribution of jet pT for QCD and QED processes.  Figure created with [python pT_pythiaEvents.py -m 20000]}
 \end{center}
 \end{figure}
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.9\textwidth]{2d_hist_jetplot_wcol.png}
 \label{fig_label}
-\caption{Pythia event display.  Figure created with [put python command here]}
+\caption{Pythia event display.  Figure created with [python 2d_hist_jetplot_wcol.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -125,9 +125,9 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.99\textwidth]{compare_xi.pdf}
 \label{fig_label}
-\caption{Fragmentation Function (Xi) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [put python command here]}
+\caption{Fragmentation Function (Xi) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [python compare_xi.py]}
 \end{center}
 \end{figure}
 
