--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -56,7 +56,7 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.99\textwidth]{pT_pythiaEvents.pdf}
+\includegraphics[width=0.9\textwidth]{pT_pythiaEvents.pdf}
 \label{fig_label}
 \caption{Distribution of jet pT for QCD and QED processes.  Figure created with [python pT_pythiaEvents.py -m 20000]}
 \end{center}
@@ -64,9 +64,9 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.9\textwidth]{2d_hist_jetplot_wcol.png}
+\includegraphics[width=0.9\textwidth]{2d_hist_jetplot.png}
 \label{fig_label}
-\caption{Pythia event display.  Figure created with [python 2d_hist_jetplot_wcol.py -b 30]}
+\caption{Pythia event display.  Figure created with [python 2d_hist_jetplot_wcol.py -o -b 30]}
 \end{center}
 \end{figure}
 
@@ -80,9 +80,9 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.9\textwidth]{2d_hist_trento.png}
 \label{fig_label}
-\caption{Trento event display (no jets).  Figure created with [put python command here]}
+\caption{Trento event display (no jets).  Figure created with [python 2d_hist_trento.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -95,25 +95,25 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.9\textwidth]{2d_hist_jetplot_wcol.png}
 \label{fig_label}
-\caption{Event display for Pythia with SlowJet Finder.  Figure created with [put python command here]}
+\caption{Event display for Pythia with SlowJet Finder.  Figure created with [python 2d_hist_jetplot_wcol.py -b 30]}
 \end{center}
 \end{figure}
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.9\textwidth]{pythia_slowjet_trento_hist1.png}
 \label{fig_label}
-\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [put python command here]}
+\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [python pythia_slowjet_trento_hist.py -b 30 -s 1]}
 \end{center}
 \end{figure}
 
 \begin{figure}[h]
 \begin{center}
-%\includegraphics[width=0.6\textwidth]{filename}
+\includegraphics[width=0.9\textwidth]{pythia_slowjet_trento_hist2.png}
 \label{fig_label}
-\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [put python command here]}
+\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [python pythia_slowjet_trento_hist.py -b 30 -s 1]}
 \end{center}
 \end{figure}
 
@@ -125,7 +125,7 @@ Joseph Simpson and Ron Soltz
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.99\textwidth]{compare_xi.pdf}
+\includegraphics[width=0.9\textwidth]{compare_xi.pdf}
 \label{fig_label}
 \caption{Fragmentation Function (Xi) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [python compare_xi.py]}
 \end{center}
