add escapes before underscores in text

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -58,15 +58,16 @@ Joseph Simpson and Ron Soltz
 \begin{center}
 \includegraphics[width=0.9\textwidth]{pT_pythiaEvents.pdf}
 \label{fig_label}
-\caption{Distribution of jet pT for QCD and QED processes.  Figure created with [python pT_pythiaEvents.py -m 20000]}
+\caption{Distribution of jet pT for QCD and QED processes.  Figure created with [python pT\_pythiaEvents.py -m 20000]}
 \end{center}
 \end{figure}
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.9\textwidth]{2d_hist_jetplot.png}
+\includegraphics[width=0.49\textwidth]{2d_hist_jetplot.png}
+\includegraphics[width=0.49\textwidth]{2d_hist_jetplot.png}
 \label{fig_label}
-\caption{Pythia event display.  Figure created with [python 2d_hist_jetplot_wcol.py -o -b 30]}
+\caption{Pythia event display.  Figure created with [python 2d\_hist\_jetplot\_wcol.py -o -b 30]}
 \end{center}
 \end{figure}
 
@@ -82,7 +83,7 @@ Joseph Simpson and Ron Soltz
 \begin{center}
 \includegraphics[width=0.9\textwidth]{2d_hist_trento.png}
 \label{fig_label}
-\caption{Trento event display (no jets).  Figure created with [python 2d_hist_trento.py -b 30]}
+\caption{Trento event display (no jets).  Figure created with [python 2d\_hist\_trento.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -97,7 +98,7 @@ Joseph Simpson and Ron Soltz
 \begin{center}
 \includegraphics[width=0.9\textwidth]{2d_hist_jetplot_wcol.png}
 \label{fig_label}
-\caption{Event display for Pythia with SlowJet Finder.  Figure created with [python 2d_hist_jetplot_wcol.py -b 30]}
+\caption{Event display for Pythia with SlowJet Finder.  Figure created with [python 2d\_hist\_jetplot\_wcol.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -105,7 +106,7 @@ Joseph Simpson and Ron Soltz
 \begin{center}
 \includegraphics[width=0.9\textwidth]{pythia_slowjet_trento_hist1.png}
 \label{fig_label}
-\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [python pythia_slowjet_trento_hist.py -b 30 -s 1]}
+\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [python pythia\_slowjet\_trento\_hist.py -b 30 -s 1]}
 \end{center}
 \end{figure}
 
@@ -113,7 +114,7 @@ Joseph Simpson and Ron Soltz
 \begin{center}
 \includegraphics[width=0.9\textwidth]{pythia_slowjet_trento_hist2.png}
 \label{fig_label}
-\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [python pythia_slowjet_trento_hist.py -b 30 -s 1]}
+\caption{Event display for Pythia+Trento with SlowJet Finder.  Figure created with [python pythia\_slowjet\_trento\_hist.py -b 30 -s 1]}
 \end{center}
 \end{figure}
 
@@ -127,7 +128,7 @@ Joseph Simpson and Ron Soltz
 \begin{center}
 \includegraphics[width=0.9\textwidth]{compare_xi.pdf}
 \label{fig_label}
-\caption{Fragmentation Function (Xi) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [python compare_xi.py]}
+\caption{Fragmentation Function (Xi) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [python compare\_xi.py]}
 \end{center}
 \end{figure}
 
