--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -42,13 +42,12 @@ We present results applying the Pythia SlowJet Finder to Pythia generated QCD an
 \newpage 
 
 \section{Introduction}
-%
-% Ron writes this section
-%
+\subsection*{Motivation}
 
-\subsection{Motivation}
+The study of jet-quenching in heavy ion collisions, how jets lose energy as the evolve within the quark-gluon plasma (QGP) is one of the most important topics remaining in the quest to understand the detailed properties of the QGP.  
 
-\subsection{Software Framework}
+
+\subsection*{Software Framework}
 
 \section{Running Pythia}
 %
