most recent updates to report

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -55,9 +55,9 @@ We present results applying the Pythia SlowJet Finder to Pythia generated QCD an
 %Describe pythia settings, show lego plot of jet events, for QCD and QED
 %Show distribution of jet pT distributions for QCD and QED
 %
-Pythia allows users to set beam CM energy (eCM). By default Pythia sets eCM to 14 TeV, the default for all our programs is 200 GeV .  Initial QCD or QED hard scattering processes may be turned on or off. Pythia also allows restrictions to be set on the transverse momentum produced by hard scattering (pTHat or jet pT). For our programs the jet pT range is typically 20-25 GeV.
-Figure 1 shows the distribution of jet pT for both various QCD and various QED processes restricted to the range of 20-50 GeV. The upper histogram of figure 1 shows the four most common QCD hard processes produced by Pythia. There are also other hard processes, such as those that involve heavy quarks, but they occur so infrequently that they are not included. The lower histogram shows all five of the QED hard processes, however only two of the processes occur frequently.
-Figure 2 shows two lego plots, one for a QCD event and one for a QED event. These plots demonstrate how our programs are able to display each Pythia event. Each particle that is produced from a Pythia event is binned in a 2 dimensional histogram depending on its pseudorapidity (eta) and azimuthal angle (phi). The histogram bins are weighted by transverse energy (eT). In both plots in figure 2 it is easy to identify the jets produced by the Pythia events.
+Pythia allows users to set beam CM energy (eCM). By default Pythia sets eCM to 14 TeV, the default for all our programs is 200 GeV .  Initial QCD or QED hard scattering processes may be turned on or off. Pythia also allows restrictions to be set on the transverse momentum produced by hard scattering (pTHat or jet pT). For our programs the jet pT range is typically 20-25 GeV. Figure 1 shows the distribution of jet pT for both various QCD and various QED processes restricted to the range of 20-50 GeV. The upper histogram of figure 1 shows the four most common QCD hard processes produced by Pythia. The different processes are shown in the legend. Gluons are represented by "g", quarks (uds) are represented by "q", and anti-quarks (uds) are represented by "q(bar)." There are also other hard processes, such as those that involve heavy quarks, but they occur so infrequently that they are not included. The lower histogram shows all five of the QED hard processes, however only two of the processes occur frequently. For these processes photons are represented by "gamma," and fermions participating in electroweak interactions are represented by "f" and "f(bar)."
+
+Figure 2 shows two lego plots, one for a QCD event and one for a QED event. These plots demonstrate how our programs are able to display each Pythia event. Each particle that is produced from a Pythia event is binned in a 2 dimensional histogram depending on its pseudo-rapidity ($\eta$) and azimuthal angle ($\phi$). The histogram bins are weighted by transverse energy (eT). In both plots it is easy to identify the jets produced by the Pythia events. For the QED plot it is important to note that one of the jets is produced by only a single photon. 
 
 \begin{figure}[h]
 \begin{center}
@@ -83,7 +83,11 @@ Figure 2 shows two lego plots, one for a QCD event and one for a QED event. Thes
 % Explain how we generate pT, eta, and phi.
 % Explain we add radial flow and elliptic flow from epsilon_2 variable.
 %
+\trento\ allows users to input several physical options in order to create realistic heavy ion collision backgrounds. These options include two projectiles, number of events, reduced-thickness, fluctuation, nucleon-width, cross-section, and a normalization factor. For each data set,  we used non-deformed gold (Au) nuclei with 197 nucleons each. We produced 100,000 events for several different cross-sections. All other physical options were left to their default settings: reduced-thickness = 0, fluctuation = 1, nucleon-width = 0.5 fm, and normalization = 1. Different cross-sections correspond to different CM beam energies per nucleon pair. The cross-sections (in units of fm$^2$) that we used to simulate the different beam energies are as follows: 4.23 for 200 GeV, 3.96 for 130 GeV, 3.60 for 62.4 GeV, 3.43 for 39 GeV, 3.32 for 27 GeV, 3.25 for 19.6 GeV, 3.20 for 15.0 GeV, and 3.12 for 7.7 GeV. \trento\ reads in the options and produces a text file listing several event properties for each event: event number, impact parameter, number of participants, initial entropy, and properties of flow. The produced \trento\ text files were then imported into our programs as an array of event data.
 
+To use the \trento\ data as we intended we had to produce accurate Au + Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. Using the constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values.
+
+Using the \trento\ multiplicity values we now knew how many background particles to create for each \trento\ event. To generate values of transverse momentum (pT), pseudo-rapidity ($\eta$), and azimuthal angle ($\phi$) for each particle we used the NumPy random number generator. For $\phi$ we created a random number between -$\pi$ and $\pi$. For $\eta$ we created a random number between -2 and 2. 
 
 \begin{figure}[h]
 \begin{center}
