added true jet file and edits to report

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -91,9 +91,10 @@ Using the \trento\ multiplicity values we now knew how many background particles
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.8\textwidth]{2d_hist_trento.png}
+\includegraphics[width=0.49\textwidth]{2d_hist_trento.png}
+\includegraphics[width=0.49\textwidth]{2d_hist_trento2.png}
 \label{fig_label}
-\caption{Trento event display (no jets).  Figure created with [python 2d\_hist\_trento.py -b 30]}
+\caption{Trento event display (no jets).  Both plots created with [python 2d\_hist\_trento.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -117,17 +118,10 @@ Figures 4, 5, and 6 demonstrate how well SlowJet is able to function in Pythia e
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.8\textwidth]{pythia_slowjet_trento_hist1.png}
+\includegraphics[width=0.49\textwidth]{pythia_slowjet_trento_hist1.png}
+\includegraphics[width=0.49\textwidth]{pythia_slowjet_trento_hist2.png}
 \label{fig_label}
 \caption{Event display for Pythia+Trento with SlowJet Finder, low multiplicity heavy ion background. The color scheme is that Pythia particles that are identified as jets are colored red, other Pythia particles are colored blue, \trento\ particles that are identified as jets are colored yellow, and other \trento\ particles are colored sky blue. Figure created with [python pythia\_slowjet\_trento\_hist.py -b 30 -s 1]}
-\end{center}
-\end{figure}
-
-\begin{figure}[h]
-\begin{center}
-\includegraphics[width=0.8\textwidth]{pythia_slowjet_trento_hist2.png}
-\label{fig_label}
-\caption{Event display for Pythia+Trento with SlowJet Finder, high multiplicity heavy ion background.  The color scheme is that Pythia particles that are identified as jets are colored red, other Pythia particles are colored blue, \trento\ particles that are identified as jets are colored yellow, and other \trento\ particles are colored sky blue. Figure created with [python pythia\_slowjet\_trento\_hist.py -b 30 -s 1]}
 \end{center}
 \end{figure}
 
