edits to report

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -85,9 +85,11 @@ Figure 2 shows two lego plots, one for a QCD event and one for a QED event. Thes
 %
 \trento\ allows users to input several physical options in order to create realistic heavy ion collision backgrounds. These options include two projectiles, number of events, reduced-thickness, fluctuation, nucleon-width, cross-section, and a normalization factor. For each data set,  we used non-deformed gold (Au) nuclei with 197 nucleons each. We produced 100,000 events for several different cross-sections. All other physical options were left to their default settings: reduced-thickness = 0, fluctuation = 1, nucleon-width = 0.5 fm, and normalization = 1. Different cross-sections correspond to different beam $E_{CM}$ per nucleon pair. The cross-sections (in units of fm$^2$) that we used to simulate the different beam energies are as follows: 4.23 for 200 GeV, 3.96 for 130 GeV, 3.60 for 62.4 GeV, 3.43 for 39 GeV, 3.32 for 27 GeV, 3.25 for 19.6 GeV, 3.20 for 15.0 GeV, and 3.12 for 7.7 GeV. \trento\ reads in the options and produces a text file listing several event properties for each event: event number, impact parameter, number of participants, initial entropy, and properties of flow. The produced \trento\ text files were then imported into our programs as an array of event data.
 
-To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. Using the constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values.
+To use the \trento\ data as we intended we had to produce accurate Au-Au multiplicities for the various beam energies. To do this we fit the \trento\ data to PHENIX data. We created a histogram for the number of participants in each \trento\ event and weighted the bins by the initial entropy. We then scaled the \trento\ data at each energy by a constant to fit it to the PHENIX data of charged multiplicity vs. number of participants. Using the constants from the fit at each energy allowed us to create multiplicity values from the initial entropy values. The constant for the 200 GeV data was 4.65905256.
 
-Using the \trento\ multiplicity values we now knew how many background particles to create for each \trento\ event. To generate values of transverse momentum ($p_T$), pseudo-rapidity ($\eta$), and azimuthal angle ($\phi$) for each particle we used the numpy random number generator. For $\phi$  and $\eta$ we created flat distributions between -$\pi$ to $\pi$ and -2 to 2, and for $p_T$ we sampled from a Gaussian deviate, which is equivalent to a thermal Boltzmann distribution. We also included radial and elliptic flow into our background distributions by using the $\epsilon_2$ variable from the \trento\ data. First we calculated the initial transverse rapidity ($y_T$) and then applied flow as an additive boost. The scaling parameter for radial flow ($\rho_0$) that we used was 0.85 from Retiere and Lisa, PRC70.044907 (2004), table 2.  The scaling parameter for elliptic flow ($\rho_2$) was 0.15 from Alver and Roland, PRC81,054905 (2010), fig 4. Again using the numpy random number generator we created a normalized radial distance ($\rho$). After applying flow, $y_T$ was converted back to $p_T$. The mass used for these calculations was chosen randomly from one of nine different particles that were included in the produced background. These particles consisted of pions, kaons, protons, and neutrons, as well as their anti particle counterparts. Figure 3 shows the background display produced from \trento\ events. Again each particle that is produced is binned in a 2 dimensional histogram depending on its ($\eta$) and ($\phi$). For this plot the histogram bins are weighted by $p_T$. There are no jets produced within the \trento\ background.
+Using the \trento\ multiplicity values we now knew how many background particles to create for each \trento\ event. To generate values of transverse momentum ($p_T$), pseudo-rapidity ($\eta$), and azimuthal angle ($\phi$) for each particle we used the numpy random number generator. For $\phi$  and $\eta$ we created flat distributions between -$\pi$ to $\pi$ and -2 to 2, and for $p_T$ we sampled from a Gaussian deviate, which is equivalent to a thermal Boltzmann distribution. We also included radial and elliptic flow into our background distributions by using the $\epsilon_2$ variable from the \trento\ data. First we calculated the initial transverse rapidity ($y_T$) and then applied flow as an additive boost. 
+\[y_{Boost} = \rho \times \rho_0 + \rho_2 \times \epsilon_2 \times cos(2\phi)\]
+The scaling parameter for radial flow ($\rho_0$) that we used was 0.85 from Retiere and Lisa, PRC70.044907 (2004), table 2.  The scaling parameter for elliptic flow ($\rho_2$) was 0.15 from Alver and Roland, PRC81,054905 (2010), fig 4. Again using the numpy random number generator we created a normalized radial distance ($\rho$). After applying flow, $y_T$ was converted back to $p_T$. The mass used for these calculations was chosen randomly from one of nine different particles that were included in the produced background. These particles consisted of pions, kaons, protons, and neutrons, as well as their anti particle counterparts. Figure 3 shows the background display produced from \trento\ events. Again each particle that is produced is binned in a 2 dimensional histogram depending on its ($\eta$) and ($\phi$). For this plot the histogram bins are weighted by $p_T$. There are no jets produced within the \trento\ background.
 
 \begin{figure}[h]
 \begin{center}
@@ -104,15 +106,18 @@ Using the \trento\ multiplicity values we now knew how many background particles
 % Show examples of SlowJet Finder on Pythia only.
 % Show example of SlowJet Finder on Pythia plus Trento.
 %
-The SlowJet jet finder takes several input parameters that affect how it searches for jets. These parameters are power, radius, minimum jet $p_T$ ($p_TjetMin$), $etaMax$, select, and $massSet$. Power determines which jet finding algorithm to use. For our programs we set power to -1, this corresponds to the {\it anti-k$T$} algorithm. Other possible algorithms for SlowJet are the Cambridge/Aachen algorithm and the $kT$ algorithm. Radius is crudely related to the radius of the jet cone in ($y$,$\phi$) space. In most of our programs radius is set to 0.7 by default. $p_TjetMin$ is the minimum $p_T$ that a cluster must have to become a jet. Our values for $p_TjetMin$ are normally set to 10 or 15 GeV. $etaMax$ is the maximum +/- pseudo-rapidity that the detector is assumed to cover. For our programs $etaMax$ is always set to 2. Select determines which particles are analyzed by SlowJet. For our programs select is always set to 2 which corresponds to all observable final-state particles. $massSet$ determines the masses assumed for the particles analyzed by SlowJet. There are three $massSet$ options: 0 for all massless, 1 for photons are massless while all others are assigned the mass of charged pions, and 2 for all given their correct masses. For our programs $massSet$ is set to either 1 or 2.
+The SlowJet jet finder takes several input parameters that affect how it searches for jets. These parameters are power, radius, minimum jet $p_T$ ($p_TjetMin$), $etaMax$, select, and $massSet$. Power determines which jet finding algorithm to use. For our programs we set power to -1, this corresponds to the {\it anti-k$T$} algorithm. Other possible algorithms for SlowJet are the Cambridge/Aachen algorithm and the $kT$ algorithm. Radius is crudely related to the radius of the jet cone in ($y$,$\phi$) space. In most of our programs radius is set to 0.7 by default. $p_TjetMin$ is the minimum $p_T$ that a cluster must have to become a jet. Our values for $p_TjetMin$ are normally set to 10 or 15 GeV. $etaMax$ is the maximum +/- pseudo-rapidity that the detector is assumed to cover. For our programs $etaMax$ is always set to 2. Select determines which particles are analyzed by SlowJet. For our programs select is always set to 2 which corresponds to all observable final-state particles. $massSet$ determines the masses assumed for the particles analyzed by SlowJet. There are three $massSet$ options: 0 for all massless, 1 for photons are massless while all others are assigned the mass of charged pions, and 2 for all given their correct masses. For our programs $massSet$ is set to either 1 or 2. Radius and $p_TjetMin$ are the parameters that are most often changed while we examine jets.
 
-Figures 4 and 5 demonstrate how well SlowJet is able to function in Pythia events with varying amounts of heavy ion background. Both figures use the same familiar event display that was shown in figures 2 and 3 and use the standard SlowJet settings discussed above. In these figures the color scheme is that Pythia particles that are identified as jets are colored red while all other Pythia particles are colored blue, and \trento\ particles that are identified as jets are colored yellow while other \trento\ particles are colored sky blue. Figure 4 is a Pythia event with no heavy ion background. In this case SlowJet correctly identifies both jets. Figure 5 is a greater test for SlowJet because now a \trento\ background is introduced. In the low \trento\ multiplicity event, SlowJet is still able to correctly identify the two jets, however a few background particles, shown in yellow, are also lumped in with the jets.  In the high \trento\ multiplicity event SlowJet becomes confused. In this case there are many \trento\ particles identified as jets, those shown in yellow. The true jets become lost in the background and SlowJet fails.
+Figures 4 and 5 demonstrate how well SlowJet is able to function in Pythia events with varying amounts of heavy ion background. Both figures use the same familiar event display that was shown in figures 2 and 3 and use the standard SlowJet settings discussed above. In these figures the color scheme is that Pythia particles that are identified as jets are colored red while all other Pythia particles are colored blue, and \trento\ particles that are identified as jets are colored yellow while other \trento\ particles are colored sky blue. Figure 4 shows two Pythia events with no heavy ion background. In the event shown on the left SlowJet correctly identifies both jets. However, in the event on the right, the second jet is too diffuse and SlowJet does not identify it as a jet. Figure 5 is a greater test for SlowJet because now a \trento\ background is introduced. In the low \trento\ multiplicity event, SlowJet is still able to correctly identify the two jets, however a few background particles, shown in yellow, are also lumped in with the jets.  In the high \trento\ multiplicity event SlowJet becomes confused. In this case there are many \trento\ particles identified as jets, those shown in yellow. The true jets become lost in the background and SlowJet fails.
+
+All the bar plots in figures 4 and 5 are created in a way so that bars are stacked on top of each other if two different color bars share the same bin. The order in which the bars are stacked is that the sky blue bars corresponding to \trento\ background not mistaken as jets goes on the bottom. The dark blue bars associated with Pythia particles not identified as jets are stacked next. Then the yellow bars associated with \trento\ background mistakenly identified as jets are stacked. Pythia particles that are identified as jets, shown in red, are then stacked on the very top. This order of stacking the bars is the most useful when displaying very congested events because it is easy to see how SlowJet performed.
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.8\textwidth]{2d_hist_jetplot_wcol.png}
+\includegraphics[width=0.49\textwidth]{2d_hist_jetplot_wcol.png}
+\includegraphics[width=0.49\textwidth]{2d_hist_jetplot_wcol2.png}
 \label{fig_label}
-\caption{Event display for Pythia with SlowJet Finder, no heavy ion background.  Particles identified as being a part of a jet are colored red, all other particles are colored blue. Figure created with [python 2d\_hist\_jetplot\_wcol.py -b 30]}
+\caption{Event display for Pythia with SlowJet Finder, no heavy ion background.  SlowJet succeeds on the left but struggles on the right. Particles identified as being a part of a jet are colored red, all other particles are colored blue. Both plots created with [python 2d\_hist\_jetplot\_wcol.py -b 30]}
 \end{center}
 \end{figure}
 
@@ -128,14 +133,19 @@ Figures 4 and 5 demonstrate how well SlowJet is able to function in Pythia event
 \section{Studying Jets}
 %
 % Define formula for fragmentation function.
-% Explain methodology for tracing particles in 
+% Explain methodology for tracing particles in jets
 %
+To study jets and explore the different parameters of SlowJet we first focused on the SlowJet parameters of radius and $p_TjetMin$. One of our programs examined how many jets were identified in Pythia events with \trento\ backgrounds. Ideally SlowJet should identify 2 jets for each Pythia event. We found that when $p_TjetMin$ was set low and radius was set high, far too many jets would be identified on average. However, if $p_TjetMin$ was set high and radius set low, very few jets would be identified. In the \trento\ backgrounds it is difficult to raise the requirements for clusters to be identified as jets while still being able to identify all Pythia jets. Another program restricted the $p_T$ of Pythia jets to 20-25 GeV and set $p_TjetMin$ to 15 GeV. Radius was then varied to see if the identified jets would be in the correct $p_T$ range. We found similar results. Increasing radius to values as high as 0.8 caused the peak of identified jets to be within the proper $p_T$ range but also allowed many jets above the range to be identified as well. Decreasing radius to values as low as 0.3 caused the peak of identified jets to fall below the proper $p_T$ range but reduced the number of jets that were identified above the range.
+
+Our next focus was on the fragmentation function value ($\xi$) for particles within both SlowJet jets and true jets. To calculate $\xi$ we used the following formula:
+\[\xi = ln((\vec{p_{jet}} \cdot \vec{p_{jet}})/(\vec{p_{jet}} \cdot \vec{p_{prt}}))\]
+In figure 6, $\xi$ is calculated for both QCD and QED events with no \trento\ data on the left and with \trento\ data on the right. $\xi$ is calculated for SlowJet jets with radius set at 0.3, 0.5, and 0.7 in all four plots. In the plots it is noticeable that as radius is decreased the peak of $\xi$ values for reconstructed jets is reduced. This occurs because particles with higher $\xi$ values are farther away from the center of the jet cone. As radius is decreased particles on the edge of the jet cone are no longer included in the reconstructed jets. True jets consist of all particles that are ancestors of the initial hard scattering in each Pythia event. These particles were identified by tracing the daughters of each particle starting with the two initial particles that participated in the hard process and ending when only final state particles remain.
 
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{compare_xi.pdf}
 \label{fig_label}
-\caption{Fragmentation Function (Xi) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [python compare\_xi.py]}
+\caption{Fragmentation function value ($\xi$) distributions for true and reconstructed QCD and QED jets, with and without trento backgrounds.  Figure created with [python compare\_xi.py]}
 \end{center}
 \end{figure}
 
