show example of description environment

--- a/doc/jetStudy_PythiaTrento.tex
+++ b/doc/jetStudy_PythiaTrento.tex
@@ -149,9 +149,15 @@ In figure 6, $\xi$ is calculated for both QCD and QED events with no \trento\ da
 \end{center}
 \end{figure}
 
-\appendix{Listing of Python Scripts}
-%
-% Provide descriptions for all python scripts, similar to README file.
-%
+\appendix
+
+\section{Listing of Python Scripts}
+\begin{description}
+\item[python\_script\_1\_name] Describe first python script.
+\item[python\_script\_2\_name] Describe second python script.
+\item[python\_script\_3\_name] Describe third python script.
+
+\end{description}
+
 
 \end{document}
